<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aubg.aubg_emergency.Register"
    android:weightSum="1"
    android:background="#3F51B5">

    <TextView
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enterName"
        android:id="@+id/textView12"
        android:layout_weight="0.06" />

    <EditText
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText"
        android:hint="@string/nameHint" />

    <TextView
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/emergencyPhone"
        android:id="@+id/textView13"
        android:layout_weight="0.06" />

    <EditText
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_weight="0.06"
        android:hint="@string/phoneHint" />

    <CheckBox
        android:textColor="#FFFFFF"
        android:layout_width="185dp"
        android:layout_height="30dp"
        android:text="@string/mapSnap"
        android:id="@+id/checkBox"
        android:layout_weight="0.06" />

    <CheckBox
        android:textColor="#FFFFFF"
        android:layout_width="185dp"
        android:layout_height="30dp"
        android:text="@string/beacon"
        android:id="@+id/checkBox2"
        android:layout_weight="0.06"
        android:checked="false" />

    <Button
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveButton"
        android:id="@+id/button6"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:onClick="Save"/>
</LinearLayout>
